lisasin menüüle logo

--- a/Loomade varjupaik/index.html
+++ b/Loomade varjupaik/index.html
@@ -19,7 +19,7 @@
 <!--Menu-->
 
 <div class="sidenav">
-    <img src="img/logo.png" />
+    <img src="logo.png" />
     <a href="#">Avaleht</a>
     <a href="#">Loomad varjupiagas</a>
     <a href="#">Kaotatud loomad</a>
