loomade varjupaiga katsetused

--- a/Loomade varjupaik/index.html
+++ b/Loomade varjupaik/index.html
@@ -17,6 +17,15 @@
 </head>
 <body>
 
+
+
+<div class="container">
+
+    <!--Header-->
+
+    <div class="header">
+        <p>siin on bänner</p>
+    </div>
 <!--Menu-->
 
 <div class="sidenav">
@@ -30,6 +39,6 @@
 </div>
 
 
-
+</div>
 </body>
 </html>
