--- a/numbriarvamise mäng/index.html
+++ b/numbriarvamise mäng/index.html
@@ -17,7 +17,7 @@
 <p>Arva ära number 1 ja 100 vahel</p>
 
 <div class="form">
-    <label for="guessField">Sisesta pakkumine:</lable>
+    <lable for="guessField">Sisesta pakkumine:</lable>
         <input type="number" min="1" max="100" id="guessField" class="guessField">
         <input type="submit" value="Kontrolli" class="guessSubmit">
 </div>
